src/styles/Theme.css
/* Typography */

.custom-block-title {
  @apply text-white text-3xl font-bold tracking-normal;
}
.custom-block-big-title {
  @apply text-white text-4xl xl:text-5xl font-bold tracking-normal;
}
.custom-block-subtitle {
  @apply text-xs text-customSecondary  tracking-wider font-bold uppercase;
}
.custom-content-title {
  @apply text-white text-lg font-bold tracking-normal;
}
.custom-content-text-white {
  @apply text-white text-base leading-relaxed;
}
.custom-content-text-gray {
  @apply text-gray-400 text-base;
}

/* Backgrounds */

.custom-bg-dark1 {
  @apply bg-customDarkBg1  fill-customDarkBg1;
}
.custom-bg-dark2 {
  @apply bg-customDarkBg2  fill-customDarkBg2;
}
.custom-bg-dark3 {
  @apply bg-customDarkBg3  fill-customDarkBg3;
}
body,
html {
  @apply bg-customDarkBg2;
}

/* Borders */

.custom-border-gray {
  @apply border border-solid border-[rgb(255,255,255,0.15)];
}
.custom-border-gray-darker {
  @apply border border-solid border-[rgb(255,255,255,0.07)];
}

/* Buttons */

.custom-button-colored {
  @apply rounded-lg font-bold bg-customPrimary text-white flex justify-center items-center hover:bg-[#273474] cursor-pointer transition;
}

/* Navbar */

.navbar-link {
  @apply text-white lg:text-base text-2xl  leading-6 mr-4 ml-4   2xl:mr-6 2xl:ml-6 cursor-pointer font-normal lg:font-medium hover:scale-110 transition duration-300 h-full pt-2;
}

/* Preventing FOUC */
@font-face {
  font-display: var(--fontsource-Inter-font-display, optional);
}

.circle {
  --circle-size: 40px;
  position: fixed;
  height: var(--circle-size);
  width: var(--circle-size);
  border: 2px solid white;
  border-radius: 100%;
  top: calc(var(--circle-size) / 2 * -1);
  left: calc(var(--circle-size) / 2 * -1);
  pointer-events: none;
  filter: invert(0);
  mix-blend-mode: difference;
}

